--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,13 +8,13 @@
   margin-bottom: 0;
   margin-right: 10px;
 }
-@media screen and (max-width: 1025px) {
+@media screen and (max-width: 1023px) {
   .place__title {
     font-size: 42px;
     line-height: 110%;
   }
 }
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 767px) {
   .place__title {
     font-size: 32px;
     line-height: 109%;
